[gd_scene load_steps=7 format=3 uid="uid://byfh0p3nqrosa"]

[ext_resource type="Script" path="res://gui/views/PatternEditor.gd" id="1_eqswn"]
[ext_resource type="PackedScene" uid="uid://dciyoa2wkbtfp" path="res://gui/views/note_map/NoteMap.tscn" id="1_jt24t"]
[ext_resource type="PackedScene" uid="uid://dpno0cpboqdm0" path="res://gui/widgets/OptionPicker.tscn" id="3_g46lg"]
[ext_resource type="Texture2D" uid="uid://34gjffqqcubk" path="res://assets/icons/plus.png" id="4_67s6m"]
[ext_resource type="Texture2D" uid="uid://3r61aokrspvu" path="res://assets/icons/record.png" id="4_pyo8q"]
[ext_resource type="Texture2D" uid="uid://os3udjkncg7b" path="res://assets/icons/minus.png" id="5_0tk4a"]

[node name="PatternEditor" type="VBoxContainer"]
auto_translate_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_eqswn")

[node name="NoteMap" parent="." instance=ExtResource("1_jt24t")]
layout_mode = 2

[node name="PatternSettings" type="PanelContainer" parent="."]
layout_mode = 2
theme_type_variation = &"PatternSettingsPanel"

[node name="PropertyBar" type="HBoxContainer" parent="PatternSettings"]
auto_translate_mode = 1
layout_mode = 2
theme_type_variation = &"PatternSettingsBar"

[node name="PickerPanel" type="PanelContainer" parent="PatternSettings/PropertyBar"]
layout_mode = 2
theme_type_variation = &"PatternSettingsPickerPanel"

[node name="InstrumentPicker" parent="PatternSettings/PropertyBar/PickerPanel" instance=ExtResource("3_g46lg")]
unique_name_in_owner = true
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
direction = 2
placeholder_text = "Instrument Name"

[node name="ButtonBar" type="HBoxContainer" parent="PatternSettings/PropertyBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"PatternSettingsBar"

[node name="Label" type="Label" parent="PatternSettings/PropertyBar/ButtonBar"]
layout_mode = 2
text = "REC"

[node name="RecordInstrument" type="Button" parent="PatternSettings/PropertyBar/ButtonBar"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(28, 26)
layout_mode = 2
focus_mode = 0
theme_type_variation = &"RecordButton"
toggle_mode = true
icon = ExtResource("4_pyo8q")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Control" type="Control" parent="PatternSettings/PropertyBar/ButtonBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NoteShiftUp" type="Button" parent="PatternSettings/PropertyBar/ButtonBar"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(40, 26)
layout_mode = 2
focus_mode = 0
theme_type_variation = &"IncrementButton"
icon = ExtResource("4_67s6m")
flat = true
icon_alignment = 1
expand_icon = true

[node name="NoteShiftDown" type="Button" parent="PatternSettings/PropertyBar/ButtonBar"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(40, 26)
layout_mode = 2
focus_mode = 0
theme_type_variation = &"IncrementButton"
icon = ExtResource("5_0tk4a")
flat = true
icon_alignment = 1
expand_icon = true

[node name="PickerPanel2" type="PanelContainer" parent="PatternSettings/PropertyBar"]
layout_mode = 2
theme_type_variation = &"PatternSettingsPickerPanel"

[node name="ScalePicker" parent="PatternSettings/PropertyBar/PickerPanel2" instance=ExtResource("3_g46lg")]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
direction = 2
placeholder_text = "Scale"

[node name="PickerPanel3" type="PanelContainer" parent="PatternSettings/PropertyBar"]
auto_translate_mode = 1
layout_mode = 2
theme_type_variation = &"PatternSettingsPickerPanel"

[node name="KeyPicker" parent="PatternSettings/PropertyBar/PickerPanel3" instance=ExtResource("3_g46lg")]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
direction = 2
placeholder_text = "K"
